fixing the grobal scrollbar

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -21,7 +21,7 @@
 
 ::-webkit-scrollbar {
     width: 10px;
-    height: 10px;
+    height: 100%;
   }
    
   ::-webkit-scrollbar-button:start:decrement,
@@ -31,7 +31,7 @@
    
   ::-webkit-scrollbar-track-piece  {
     background-color: var( --color-background);
-    
+    height: 100%;
   }
    
   ::-webkit-scrollbar-thumb:vertical {
